merged hyracks_asterix_stabilization r1792:1829 to hyracks_lsm_tree
git-svn-id: https://hyracks.googlecode.com/svn/branches/hyracks_lsm_tree@1836 123451ca-8445-de46-9d55-352943316053